# Cable-Jugglebot-Robot

./: README.md  pyproject.toml  test_simulation.py
scripts/: generate_simple_throw.sh
simulation prototype/: cable_robot_taskspace_tension_torque_refactored.py
src/Cable-Jugglebot/config/: default.yaml
src/jugglebot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jugglebot/apps/: controlui.py  plantraj.py  playtraj.py  reviewlog.py  robotd.py  simd.py
src/jugglebot/config/: __init__.py  default.yaml
src/jugglebot/core/: cable_ik.py  robot_server.py
src/jugglebot/drivers/: ODriveCANSimple.py  driver_interface.py  hardware_driver.py  mujoco_driver.py  simulation_driver.py
src/jugglebot/planning/: __init__.py  io.py  profile_loader.py
src/jugglebot/profiles/: simple_throw.yaml
src/jugglebot/simulation/: cable_robot_5dof_winch.xml
tests/planning/: test_jugglepath_contract.py  test_profile_loader.py
trajectory prototype/: jugglepath.py  testprofile_single_throw_static_catch.py
